[metadata]
# replace with your username:
name = BoxAggregator
version = 0.0.2
author = Hugh Dickinson
author_email = hugh.dickinson@open.ac.uk
description = Spatial aggregation for Citizen Science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ou-escape-eco/BoxAggregator
project_urls =
    Bug Tracker = https://github.com/ou-escape-eco/BoxAggregator/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
